# logs_recomendation

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  analyzer.py  client.py  parser.py  report.py
logs_recomendation/: __init__.py  analyzer.py  client.py  models.py  parser.py  report.py  utils.py
