[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logs-recomendation"
version = "0.0.0"
description = "Client activity analyzer from service logs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "typer",
]

[project.scripts]
client = "logs_recomendation.client:app"

[tool.setuptools]
packages = ["logs_recomendation"]

